# models/optionModel.js
@@ -1,22 +1,13 @@
 const { Schema, model } = require('mongoose');
 
 const optionSchema = new Schema({
-    name: {
-      type: String,
-      required: true,
-    },
-    description: {
-      type: String,
-      required: false,
-    },
-    price: {
-      type: Number,
-      required: true,
-    },
-    duration: {
-      type: Number,
-      required: true,
-    },
+    name: { type: String, required: true },
+    description: { type: String, required: true },
+    months: { type: Number },
+    price: { type: Number },
+    classes: [{ type: Schema.Types.ObjectId, ref: 'Class' }],
+    weekly: { type: Number },
+    monthly: { type: Number },
   });
   
 module.exports = model('Option', optionSchema);
